fix(recent-spendings): overflow scroll

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
 
 .sp-recent-container > #recent {
   height: 300px;
+  overflow: scroll;
   border-top: 1px solid #278664;
   border-bottom: 1px solid #278664;
 }
